--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "env-cmd": "^10.1.0",
     "firebase": "^9.12.1",
     "quill-delta-to-html": "^0.12.1",
     "react": "^18.2.0",
@@ -17,8 +18,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "sDev": "env-cmd -f ./.env.development.local react-scripts start",
+    "bDev": "env-cmd -f ./.env.development.local  react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
